Fixed gap between textarea and her wrapper

--- a/components/Textarea/Textarea.less
+++ b/components/Textarea/Textarea.less
@@ -17,6 +17,7 @@
     line-height: 16px;
     outline: none;
     padding: 8px;
+    vertical-align: middle;
     width: 100%;
     -webkit-appearance: none;
     transition: all 0.2s ease-out;
